--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,5 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-
+evm_version = "cancun"
 remappings = ["@openzeppelin/=lib/openzeppelin-contracts/", "eas-contracts/=lib/eas-contracts/contracts/"]
