--- a/foundry.toml
+++ b/foundry.toml
@@ -2,5 +2,4 @@
 src = "src"
 out = "out"
 libs = ["lib"]
-
-remappings = ["@openzeppelin/=lib/openzeppelin-contracts/", "eas-contracts/=lib/eas-contracts/contracts/"]
+remappings = ["@openzeppelin/=lib/openzeppelin-contracts@v5.0.0/", "eas-contracts/=lib/eas-contracts/contracts/"]
