use olas hub in hh task and update readme

--- a/.env.template
+++ b/.env.template
@@ -3,7 +3,9 @@ ETH_NODE_URI_SEPOLIA = <ETH_NODE_URI>
 PRIVATE_KEY = <0xPRIVATE_KEY>
 ETHERSCAN_API_KEY = <ETHERSCAN_API_KEY>
 
-# EAS Contract Addresses
+# Contract Addresses
 EAS_ADDRESS_SEPOLIA = "0xC2679fBD37d54388Ce493F1DB75320D236e1815e"
 SCHEMA_REGISTRY_ADDRESS_SEPOLIA = "0x0a7E2Ff54e76B8E6659aedc9103FB21c038050D0"  
-RESOLVER_ADDRESS_SEPOLIA = "0x0a7E2Ff54e76B8E6659aedc9103FB21c038050D0"
+RESOLVER_ADDRESS_SEPOLIA = "0xe201527cAd12e2a6869A3eEd83415B9eCBDd0AC5"
+AUTHOR_STAKE_SEPOLIA = "0x02F4AC89cBeEa72804a6F2c698F642f156D82E7E"
+OLAS_HUB_SEPOLIA = "0x079725B2D866bC50dE82ff03Ef5502Fc3C5EF349"
