create fork when running tests

--- a/.env.template
+++ b/.env.template
@@ -1,11 +1,11 @@
 # Network Configuration for Sepolia
-ETH_NODE_URI_SEPOLIA = <ETH_NODE_URI>
-PRIVATE_KEY = <0xPRIVATE_KEY>
-ETHERSCAN_API_KEY = <ETHERSCAN_API_KEY>
+export SEPOLIA_RPC_URL = <SEPOLIA_RPC_URL>
+export PRIVATE_KEY = <0xPRIVATE_KEY>
+export ETHERSCAN_API_KEY = <ETHERSCAN_API_KEY>
 
 # Contract Addresses
-EAS_ADDRESS_SEPOLIA = "0xC2679fBD37d54388Ce493F1DB75320D236e1815e"
-SCHEMA_REGISTRY_ADDRESS_SEPOLIA = "0x0a7E2Ff54e76B8E6659aedc9103FB21c038050D0"  
-RESOLVER_ADDRESS_SEPOLIA = "0xe201527cAd12e2a6869A3eEd83415B9eCBDd0AC5"
-AUTHOR_STAKE_SEPOLIA = "0x02F4AC89cBeEa72804a6F2c698F642f156D82E7E"
-OLAS_HUB_SEPOLIA = "0x079725B2D866bC50dE82ff03Ef5502Fc3C5EF349"
+export EAS_ADDRESS_SEPOLIA ="0xC2679fBD37d54388Ce493F1DB75320D236e1815e"
+export SCHEMA_REGISTRY_ADDRESS_SEPOLIA="0x0a7E2Ff54e76B8E6659aedc9103FB21c038050D0"  
+export RESOLVER_ADDRESS_SEPOLIA="0xe201527cAd12e2a6869A3eEd83415B9eCBDd0AC5"
+export AUTHOR_STAKE_SEPOLIA="0x02F4AC89cBeEa72804a6F2c698F642f156D82E7E"
+export OLAS_HUB_SEPOLIA="0x079725B2D866bC50dE82ff03Ef5502Fc3C5EF349"
