--- a/foundry.toml
+++ b/foundry.toml
@@ -3,3 +3,4 @@ src = "src"
 out = "out"
 libs = ["lib"]
 remappings = ["@openzeppelin/=lib/openzeppelin-contracts@v5.0.0/", "eas-contracts/=lib/eas-contracts/contracts/"]
+viaIR = true
